# md2pdf

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/config/: mod.rs  themes.rs
src/parser/: frontmatter.rs  markdown.rs
src/renderer/: pdf.rs
src/transpiler/: typst.rs
src/utils/: images.rs
tests/fixtures/: sample.md  simple.md
