[package]
name = "md2pdf"
version = "0.1.0"
edition = "2021"
authors = ["md2pdf contributors"]
description = "A CLI tool to convert Markdown to PDF using Typst"
license = "MIT"
repository = "https://github.com/cipherchabon/md2pdf"
keywords = ["markdown", "pdf", "typst", "converter"]
categories = ["command-line-utilities", "text-processing"]

[dependencies]
clap = { version = "4", features = ["derive"] }
pulldown-cmark = { version = "0.13", features = ["simd"] }
typst = "0.14"
typst-pdf = "0.14"
typst-assets = { version = "0.14", features = ["fonts"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "2"
chrono = "0.4"

[dev-dependencies]
tempfile = "3"
